updated practice test and conference

--- a/public/calendar.html
+++ b/public/calendar.html
@@ -179,6 +179,14 @@
         <select id="addPracticeTestStudent" name="addPracticeTestStudent" class="select"></select>
         <br>
 
+        <!-- description -->
+        <div class="inputRow">
+          <div class="more-info " data-more-info="Any additional info.">?</div>
+          <label for="addPracticeTestDescription" class="label">Description</label>
+        </div>
+        <textarea id="addPracticeTestDescription" name="addPracticeTestDescription" class="textarea"></textarea>
+        <br>
+
         <!-- buttons -->
         <div class="bottom">
           <button onclick="cancelSidebarCallback()" class="button">cancel</button>
@@ -199,7 +207,15 @@
           <div class="more-info " data-more-info="This is the student taking the test">?</div>
           <label for="editPracticeTestStudent" class="label">Student</label>
         </div>
-        <select id="editPracticeTestStudent" name="editPracticeTestStudent" class="select"></select>
+        <p id="editPracticeTestStudent" name="editPracticeTestStudent"></p>
+        <br>
+
+        <!-- description -->
+        <div class="inputRow">
+          <div class="more-info " data-more-info="Any additional info.">?</div>
+          <label for="editPracticeTestDescription" class="label">Description</label>
+        </div>
+        <textarea id="editPracticeTestDescription" name="editPracticeTestDescription" class="textarea"></textarea>
         <br>
 
         <!-- buttons -->
@@ -226,6 +242,14 @@
         <select id="addConferenceStudent" name="addConferenceStudent" class="select"></select>
         <br>
 
+        <!-- description -->
+        <div class="inputRow">
+          <div class="more-info " data-more-info="Any additional info.">?</div>
+          <label for="addConferenceDescription" class="label">Description</label>
+        </div>
+        <textarea id="addConferenceDescription" name="addConferenceDescription" class="textarea"></textarea>
+        <br>
+
         <!-- buttons -->
         <div class="bottom">
           <button onclick="cancelSidebarCallback()" class="button">cancel</button>
@@ -246,7 +270,15 @@
           <div class="more-info " data-more-info="This is the student attending the conference">?</div>
           <label for="editConferenceStudent" class="label">Student</label>
         </div>
-        <select id="editConferenceStudent" name="editConferenceStudent" class="select"></select>
+        <p id="editConferenceStudent" name="editConferenceStudent"></p>
+        <br>
+
+        <!-- description -->
+        <div class="inputRow">
+          <div class="more-info " data-more-info="Any additional info.">?</div>
+          <label for="editConferenceDescription" class="label">Description</label>
+        </div>
+        <textarea id="editConferenceDescription" name="editConferenceDescription" class="textarea"></textarea>
         <br>
 
         <!-- buttons -->
