--- a/public/Forms/ACT Daily Log/Daily Log.html
+++ b/public/Forms/ACT Daily Log/Daily Log.html
@@ -114,7 +114,7 @@
 
     <div id = "lessonPopup" onmouseover = "openLessonPopup()" onmouseout = "closeLessonPopup()" class = 'input-column-center hidden'>
         <button class = "squareButton green white" onclick = "submitLesson('mastered')">Mastered</button>
-        <button class = "squareButton yellow white" onclick = "submitLesson('proficient')">Proficient</button>
+        <button class = "squareButton yellow" onclick = "submitLesson('proficient')">Proficient</button>
         <button class = "squareButton red white" onclick = "submitLesson('review')">Review</button>
         <button class = "squareButton" onclick = "submitLesson('remove')">Remove</button>
     </div>
