more work on recurring

--- a/public/calendar.html
+++ b/public/calendar.html
@@ -391,8 +391,7 @@
 
         <div id="addLessonRecurringWrapper">
           <button class="input" onclick="recurringEventTimesClickCallback(this)">select the recurring event times</button>
-          <button class="input"onclick="recurringEventStartClickCallback(this)">select when to start this recurring event</button>
-          <button class="input"onclick="recurringEventEndClickCallback(this)">select when to end this recurring event</button>
+          <button class="input"onclick="recurringEventStartEndClickCallback(this)">select when to start and end this recurring event</button>
         </div>
 
         <!-- buttons -->
