--- a/public/Forms/ACT Daily Log/Daily Log.html
+++ b/public/Forms/ACT Daily Log/Daily Log.html
@@ -127,12 +127,12 @@
     
             <div class='graph'>
                 <div class="scores-chart">
-                    <div class="flex-column justify-center ">
+                    <!--<div class="flex-column justify-center ">
                         <div class="flex-row">
                             <button class="button graphButton" onclick="setSessionAxis('composite')">Sessions</button>
                             <button class="button nextButton graphButton" onclick="setHourAxis('composite')">Hours</button>
                         </div>
-                    </div>
+                    </div>-->
                     <canvas id="compositeCanvas" style='flex: 1;'></canvas>
                 </div>
     
