Removed buttons from charts

--- a/public/Forms/ACT Daily Log/Daily Log.html
+++ b/public/Forms/ACT Daily Log/Daily Log.html
@@ -318,10 +318,10 @@
             <div class='graph'>
                 <div class="scores-chart">
                     <div class="flex-column justify-center ">
-                        <div class="flex-row">
+                        <!--<div class="flex-row">
                             <button class="button graphButton" onclick="setSessionAxis('english')">Sessions</button>
                             <button class="button nextButton graphButton" onclick="setHourAxis('english')">Hours</button>
-                        </div>
+                        </div>-->
                     </div>
                     <canvas id="englishCanvas" style='flex: 1;'></canvas>
                 </div>
@@ -481,10 +481,10 @@
             <div class='graph'>
                 <div class="scores-chart">
                     <div class="flex-column justify-center ">
-                        <div class="flex-row">
+                        <!--<div class="flex-row">
                             <button class="button graphButton" onclick="setSessionAxis('math')">Sessions</button>
                             <button class="button nextButton graphButton" onclick="setHourAxis('math')">Hours</button>
-                        </div>
+                        </div>-->
                     </div>
                     <canvas id="mathCanvas" style='flex: 1;'></canvas>
                 </div>
@@ -643,10 +643,10 @@
             <div class='graph'>
                 <div class="scores-chart">
                     <div class="flex-column justify-center ">
-                        <div class="flex-row">
+                        <!--<div class="flex-row">
                             <button class="button graphButton" onclick="setSessionAxis('reading')">Sessions</button>
                             <button class="button nextButton graphButton" onclick="setHourAxis('reading')">Hours</button>
-                        </div>
+                        </div>-->
                     </div>
                     <canvas id="readingCanvas" style='flex: 1;'></canvas>
                 </div>
@@ -805,10 +805,10 @@
             <div class='graph'>
                 <div class="scores-chart">
                     <div class="flex-column justify-center ">
-                        <div class="flex-row">
+                        <!--<div class="flex-row">
                             <button class="button graphButton" onclick="setSessionAxis('science')">Sessions</button>
                             <button class="button nextButton graphButton" onclick="setHourAxis('science')">Hours</button>
-                        </div>
+                        </div>-->
                     </div>
                     <canvas id="scienceCanvas" style='flex: 1;'></canvas>
                 </div>
