--- a/public/calendar.html
+++ b/public/calendar.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>TESTING</title>
+  <title>Calendar</title>
   <!-- favicon stuff -->
   <link rel="apple-touch-icon" sizes="180x180" href="Images/favicon/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="Images/favicon/favicon-32x32.png">
@@ -52,13 +52,13 @@
     <div class="dropdown">
       <button class="dropbtn">add event</button>
       <div class="dropdown-content">
+        <div onclick="setupAddSidebar('availability')">Availability</div>
+        <div onclick="setupAddSidebar('conference')">Conference</div>
+        <div onclick="setupAddSidebar('generalInfo')">General Info</div>
         <div onclick="setupAddSidebar('lesson')">Lesson</div>
         <div onclick="setupAddSidebar('practiceTest')">Practice Test</div>
-        <div onclick="setupAddSidebar('testReview')">Test Review</div>
-        <div onclick="setupAddSidebar('conference')">Conference</div>
         <div onclick="setupAddSidebar('teacherMeeting')">Teacher Meeting</div>
-        <div onclick="setupAddSidebar('generalInfo')">General Info</div>
-        <div onclick="setupAddSidebar('availability')">Availability</div>
+        <div onclick="setupAddSidebar('testReview')">Test Review</div>
       </div>
     </div>
 
@@ -79,6 +79,23 @@
           <div class="dropdown-content">
             <select id="tutorFilterContent" class="ui dropdown search selection">
               <option value="">select location first</option>
+            </select>
+          </div>
+        </div>
+
+        <div class="dropdown-right">
+          <div>Type</div>
+          <div class="dropdown-content">
+            <select id="typeFilterContent" class="ui dropdown search selection">
+              <option value="">select a type</option>
+              <option value="act">ACT</option>
+              <option value="conference">Conference</option>
+              <option value="generalInfo">General Info</option>
+              <option value="mathProgram">Math Program</option>
+              <option value="practiceTest">Practice Test</option>
+              <option value="subjectTutoring">Subject Tutoring</option>
+              <option value="teacherMeeting">Teacher Meeting</option>
+              <option value="testReview">Test Review</option>
             </select>
           </div>
         </div>
