--- a/public/calendar.html
+++ b/public/calendar.html
@@ -89,6 +89,7 @@
             <select id="typeFilterContent" class="ui dropdown search selection">
               <option value="">select a type</option>
               <option value="act">ACT</option>
+              <option value="availability">Availability</option>
               <option value="conference">Conference</option>
               <option value="generalInfo">General Info</option>
               <option value="mathProgram">Math Program</option>
